--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: production
+    env:
+      HEROKU_TOKEN: ${{ secrets.HEROKU_TOKEN}}
     steps:
       - uses: actions/checkout@v2
       - name: Deploy
